--- a/identificador.html
+++ b/identificador.html
@@ -49,6 +49,12 @@
       padding: 10px; 
       transform: perspective(100px) rotateX(10deg);
     }
+
+     @media (max-width: 768px) {
+        #canvas {
+          height: 70vh; /* Ajusta la altura para dispositivos móviles */
+        }
+     }
   </style>
 </head>
 <body>
